# ebird-dataset-explorer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  justfile  package-lock.json  package.json  pyproject.toml
apps/checklists/: urls.py  views.py
apps/checklists/templates/checklists/includes/: list-entries-narrow.html  list-entries-wide.html
apps/filters/: autocompletes.py  forms.py
apps/notifications/: admin.py  apps.py
apps/observations/: views.py
apps/observations/templates/observations/includes/: list-entries-narrow.html  list-entries-wide.html
apps/species/: views.py
apps/species/templates/species/includes/: list-entries-narrow.html  list-entries-wide.html
apps/updates/: admin.py
assets/: robots.txt  sitemap.xml
assets/css/: site.css
config/: __init__.py  settings.py  urls.py
data/datasets/: README.txt
locale/en/LC_MESSAGES/: django.mo  django.po
main/: settings.py  urls.py  wsgi.py
templates/: base.html
templates/flatpages/: about.html
templates/includes/: footer.html  header.html
tests/: test_views.py
