[project]
name = "ebird-reports"
version = "0.0.0"
description = "A Django-based web site for generating reports from eBird checklists"
authors = [
  {name = "Stuart MacKay", email = "smackay@flagstonesoftware.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "django-environ>=0.11.2",
    "django>=5.1.3",
    "gunicorn>=23.0.0",
    "python-json-logger>=2.0.7",
    "sentry-sdk>=2.18.0",
    "whitenoise[brotli]>=6.8.2",
]

[project.urls]
Repository = "https://github.com/StuartMacKay/ebird-reports.git"
Issues = "https://github.com/StuartMacKay/ebird-reports/issues"
Changelog = "https://github.com/StuartMacKay/ebird-reports/blob/master/CHANGELOG.md"

[tool.bumpversion]
current_version = "0.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
ignore_missing_version = false
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "New version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "New version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "main/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [{new_version}] - {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "^date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}$"
replace = "date-released: {now:%Y-%m-%d}"
regex = true

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests/unit"
]

[tool.uv]
dev-dependencies = [
    "bump-my-version>=0.28.0",
    "django-debug-toolbar>=4.4.6",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "rust-just>=1.38.0",
]
