[project]
name = "ebird-dataset-explorer"
version = "0.0.0"
description = "A Django-based web site for browsing data from the eBird Basic Dataset"
readme = "README.md"
license-files = ["LICENSE.txt"]
requires-python = ">=3.12"
dependencies = [
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-spaceless-templates>=1.0.2",
    "django>=5.1.3",
    "gunicorn>=23.0.0",
    "ipython>=8.29.0",
    "psycopg2-binary>=2.9.10",
    "pymemcache>=4.0.0",
    "whitenoise[brotli]>=6.8.2",
    "sentry-sdk>=2.26.1",
    "django-autocomplete-light>=3.12.1",
    "django-ckeditor>=6.7.3",
    "ebird-dataset-data==0.2.0",
]

[tool.ruff]
fix = true
src = [".", "apps"]
extend-exclude = [
    "**/migrations/*.py"
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 1
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
    "testing",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
"testing" = ["faker", "pytest"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
FAIL_INVALID_TEMPLATE_VARS = true
testpaths = [
    "tests"
]
log_cli = true

[tool.bumpversion]
current_version = "0.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
ignore_missing_version = false
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "New version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "New version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "config/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = """
## Latest
"""
replace = """
## Latest

## {new_version}
"""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "django-debug-toolbar>=4.4.6",
    "ruff>=0.11.5",
    "bump-my-version>=1.1.2",
    "polib>=1.2.0",
]
